--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
         <module>modules/p2-profile-gen</module>
         <module>modules/distribution</module>
         <module>modules/styles</module>
-        <!--<module>modules/samples</module>-->
-        <!--<module>modules/integration</module>-->
+        <module>modules/samples</module>
+        <module>modules/integration</module>
     </modules>
 
     <licenses>
