--- a/pom.xml
+++ b/pom.xml
@@ -1153,7 +1153,7 @@
 
     <properties>
         <carbon.identity.version>5.1.1-SNAPSHOT</carbon.identity.version>
-        <carbon.identity.extension.version>5.0.9-SNAPSHOT</carbon.identity.extension.version>
+        <carbon.identity.extension.version>5.1.1-SNAPSHOT</carbon.identity.extension.version>
         <product.identity.version>5.2.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
@@ -1202,7 +1202,7 @@
         <version.commons.logging>1.1.1</version.commons.logging>
         <commons.lang.version>2.6</commons.lang.version>
         <emma.version>2.1.5320</emma.version>
-        <jaggeryjs.version>0.12.5-SNAPSHOT</jaggeryjs.version>
+        <jaggeryjs.version>0.12.5</jaggeryjs.version>
         <stratos.version>2.2.0</stratos.version>
         <ws.module.version>${jaggery.extensions.version}</ws.module.version>
         <oauth.module.version>${jaggery.extensions.version}</oauth.module.version>
@@ -1222,7 +1222,7 @@
         <testng.version>6.1.1</testng.version>
         <carbon.deployment.version>4.6.1</carbon.deployment.version>
         <carbon.registry.version>4.5.4</carbon.registry.version>
-        <carbon.multitenancy.version>4.5.1</carbon.multitenancy.version>
+        <carbon.multitenancy.version>4.5.2</carbon.multitenancy.version>
         <jaggery.extensions.version>1.5.0</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
         <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
