--- a/pom.xml
+++ b/pom.xml
@@ -1160,6 +1160,7 @@
         <carbon.identity.version>5.5.0-SNAPSHOT</carbon.identity.version>
         <carbon.identity.governance.version>1.0.0-SNAPSHOT</carbon.identity.governance.version>
         <carbon.identity.account.lock.version>1.0.0-SNAPSHOT</carbon.identity.account.lock.version>
+        <carbon.identity.email.mgt.version>1.0.0-SNAPSHOT</carbon.identity.email.mgt.version>
         <carbon.identity.jar.version>5.5.0-SNAPSHOT</carbon.identity.jar.version>
         <carbon.identity.extension.version>5.1.1-SNAPSHOT</carbon.identity.extension.version>
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
